fix issue with links offscreen

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -7,7 +7,7 @@
 }
 
 .links {
-  margin-top: -5%;
+  margin-top: -0%;
   display: flex;
   justify-self: center;
   grid-column-start: 2;
@@ -23,7 +23,7 @@
 }
 
 .titleSpan {
-  margin-top: -5%;
+  margin-top: -3%;
   color: white;
   padding-left: 5%;
   padding-right: 5%;
